k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pwgen
  labels:
    run: pwgen
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: pwgen
