k8s/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pwgen
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /pwgen
        pathType: Prefix
        backend:
          service:
            name: pwgen
            port:
              number: 8080
